--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
-<resources>
-    <string name="app_name">Hello_world</string>
-</resources>
+package com.example.hello_world
+
+    import com.google.gson.annotations.Seriali
